--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "main": "generate-links-server.js",
   "scripts": {
-    "start": "node generate-links-server.js",
-    "postinstall": "puppeteer browsers install chrome"
+    "postinstall": "puppeteer browsers install chrome",
+    "start": "node generate-links-server.js"
   },
   "keywords": [],
   "author": "",
